fix: missing types for documents and work items in the 'Entity Type' … (#75)
fix: missing types for documents and work items in the 'Entity Type' dropdown

Refs: #74
